unit_tests/preprocessor/errors/modulo-zero.correct
preprocessor/errors/modulo-zero:1: error: division by zero
